# symi

./: LICENSE  README.md
.github/workflows/: tauri-release.yml
.moon/: toolchain.yml  workspace.yml
docs/: README.md  moon.yml  nuxt.config.ts  package.json
docs/app/: app.config.ts  app.vue
docs/app/assets/: symi-textmate.ts
docs/app/components/: PageHeaderLinks.vue
docs/app/composables/: useSymiHighlighter.ts
docs/app/pages/: index.vue
docs/content/: 3.llm.md  4.updating-log.md  index.md
docs/content/1.getting-started/: .navigation.yml  1.index.md  2.installation.md  3.usage.md
docs/content/2.grammar/: .navigation.yml
docs/content/2.grammars/: .navigation.yml  1.index.md  2.control.md  3.pitch.md  4.time.md  5.macro.md
docs/content/3.llm/: .navigation.yml
docs/server/utils/: github.ts
editor/: README.md  moon.yml  nuxt.config.ts  package.json
editor/app/: app.vue
editor/app/assets/: THIRD-PARTY-NOTICES.txt
editor/scripts/: generate-third-party-notices.ps1
editor/src-tauri/: Cargo.toml  about.toml  tauri.conf.json
editor/src-tauri/capabilities/: default.json  desktop.json
editor/src-tauri/icons/: icon.icns
editor/src-tauri/src/: byte_char_mapper.rs  commands.rs  lib.rs  main.rs  manager.rs
rs/: .gitignore  Cargo.toml  README.md  moon.yml
rs/src/: compiler.rs  lib.rs  rowan.rs
rs/src/compiler/: compile.rs  helpers.rs  rational.rs  types.rs
rs/src/glicol/: audio.rs
rs/src/midi/: writer.rs
rs/src/rowan/: lexer.rs  marker.rs  parse_fn.rs  parser.rs  sink.rs  types.rs
rs/src/tests/: jingle_bell.symi  sample.symi  silhouette_dance.symi  silhouette_dance_rev.symi
(+36 files in other folders)
